# posix-conformance

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
src/: fd_tests.rs  fork_tests.rs  fs_tests.rs  main.rs  memory_tests.rs  pipe_tests.rs  poll_tests.rs  process_tests.rs  signal_tests.rs  socket_tests.rs  thread_tests.rs  time_tests.rs
src/arch/: mod.rs  x86_64.rs
